Fix alignment of image on first page

--- a/assets/sass/print.sass
+++ b/assets/sass/print.sass
@@ -38,9 +38,10 @@
     @bottom-center:
       content: ""
 
-    @left-middle
+    @left
       content: element(sidebar)
       background: var(--theme-color)
+      align-items: normal
 
   html,body
     background-color: #fff
@@ -53,7 +54,6 @@
     font-size: 10px
     text-align: left
     width: 5cm !important
-    margin-top: -3rem /* align with salutation */
 
     header .name
         font-size: 2em
